[gd_scene load_steps=2 format=2]

[ext_resource path="res://ChatR.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 100.0
margin_top = 50.0
margin_right = 550.0
margin_bottom = 550.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatMain" type="RichTextLabel" parent="Panel"]
margin_left = 25.0
margin_top = 60.0
margin_right = 425.0
margin_bottom = 410.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="Panel"]
margin_left = 25.0
margin_top = 425.0
margin_right = 325.0
margin_bottom = 465.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel"]
margin_left = 350.0
margin_top = 425.0
margin_right = 420.0
margin_bottom = 465.0
text = "ENVOYER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sujetchat" type="Label" parent="Panel"]
margin_left = 109.493
margin_top = 22.0
margin_right = 327.493
margin_bottom = 44.0
text = "Chat principal"

[node name="ButtonRetour" type="Button" parent="Panel"]
margin_left = 35.0
margin_top = 20.0
margin_right = 89.0
margin_bottom = 40.0
text = "Retour"

[node name="teteBox" type="Panel" parent="."]
margin_left = 102.721
margin_top = -1.36037
margin_right = 552.721
margin_bottom = 48.6396
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="chatBox" type="Label" parent="teteBox"]
margin_left = 20.0
margin_top = 10.0
margin_right = 96.0
margin_bottom = 24.0
text = "CHATROOM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCroix" type="Button" parent="teteBox"]
margin_left = 415.0
margin_top = 10.0
margin_right = 435.0
margin_bottom = 30.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="teteBox2" type="Panel" parent="."]
margin_left = 102.336
margin_top = 497.387
margin_right = 552.336
margin_bottom = 547.387
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="chatBox2" type="Label" parent="teteBox2"]
margin_left = 20.0
margin_top = 10.0
margin_right = 96.0
margin_bottom = 24.0
text = "CHATROOM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCroix" type="Button" parent="teteBox2"]
margin_left = 415.0
margin_top = 10.0
margin_right = 435.0
margin_bottom = 30.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="notification" type="Label" parent="teteBox2"]
margin_left = 109.0
margin_top = 12.0
margin_right = 168.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0.784314, 0.870588, 0.854902, 1 )
text = "
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuchat" type="Panel" parent="."]
margin_left = 100.0
margin_top = 50.0
margin_right = 550.0
margin_bottom = 550.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="idmsg" type="Button" parent="menuchat"]
margin_left = 25.0
margin_top = 5.0
margin_right = 425.0
margin_bottom = 30.0
text = "Main Chat "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notifs" type="Label" parent="menuchat/idmsg"]
margin_left = 350.0
margin_top = 5.0
margin_right = 390.0
margin_bottom = 25.0
text = "0"

[node name="VBoxContainer" type="VBoxContainer" parent="menuchat"]
margin_left = 27.0
margin_top = 45.0
margin_right = 419.0
margin_bottom = 417.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/ButtonRetour" to="." method="_on_ButtonRetour_pressed"]
[connection signal="pressed" from="teteBox/ButtonCroix" to="." method="_on_ButtonCroix_pressed"]
[connection signal="pressed" from="teteBox2/ButtonCroix" to="." method="_on_ButtonCroix_pressed"]
[connection signal="pressed" from="menuchat/idmsg" to="." method="_on_idmsg_pressed"]
